--- a/src/TodoList/TodoList.css
+++ b/src/TodoList/TodoList.css
@@ -1,8 +1,49 @@
+html, body {
+    background: #fafafa;
+    font-size: 16px;
+    font-weight: 300;
+    font-family: sans-serif;
+}
+
+.d-flex {
+    display: flex;
+}
+
+.space-between {
+    justify-content: space-between;
+}
+
 .todo-item {
-    border: 1px solid #333;
+    display: block;
+    position: relative;
+    overflow: hidden;
+    background: #fff;
     padding: 8px;
     margin: 12px;
+    border-radius: 4px;
+    -webkit-box-shadow: 0px 6px 8px 0px rgba(0,0,0,0.1);
+    -moz-box-shadow: 0px 6px 8px 0px rgba(0,0,0,0.1);
+    box-shadow: 0px 6px 8px 0px rgba(0,0,0,0.1);
 }
+
+.todo-item:before {
+    content: ' ';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 4px;
+    height: 100%;
+    
+}
+
+.todo-completed:before {
+    background: green;
+}
+
+.todo-not-completed:before {
+    background: yellowgreen;
+}
+
 
 .todo-title {
     display: block;
@@ -13,9 +54,37 @@
 }
 
 .todo-remove {
-    float: right;
+    width: 16px;
+    height: 16px;
+    margin: 8px;
+    color: #fff;
+    border-radius: 4px;
+    background: red;
+    transition: all 0.3s;
+    padding: 8px;
+    font-size: 16px;
+    font-weight: 300;
+    border: none;
+    outline: none;
 }
 
-.todo-remove:after {
-    content: 'x';
+.todo-remove:hover {
+    cursor: pointer;
+}
+
+.todo-tag {
+    display: inline-block;
+    background: #999;
+    border-radius: 4px;
+    padding: 2px;
+    margin: 2px;
+    color: #fff;
+}
+
+.todo-right {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
